address sonarQube issues